--- a/README
+++ b/README
@@ -3,3 +3,5 @@ This is based off of the program setup of CSE186's project.
 Inside this folder run `npm install` (npm = node package manager, node = javascript's runtime environment) to install the correct javascript libraries.
 
 In the frontend folder, run `npm start` to start up the node server. It should open in a browser, otherwise go to `localhost:3000` in a browser to access the app. The page should update as your code changes.
+
+The examples folder has example stuff of using the spotify API getting a list of songs based off a search and using the spotify player (requires changing the API token inside the play.html file).
