--- a/README
+++ b/README
@@ -1,7 +1,20 @@
-This is based off of the program setup of CSE186's project.
+Requirements
+------------
 
-Inside this folder run `npm install` (npm = node package manager, node = javascript's runtime environment) to install the correct javascript libraries.
+* docker-compose
+* requires npm (latest stable release recommended)
+* a spotify account with Spotify Premium
 
-In the frontend folder, run `npm start` to start up the node server. It should open in a browser, otherwise go to `localhost:3000` in a browser to access the app. The page should update as your code changes.
+Installation Guide
+------------------
 
-The examples folder has example stuff of using the spotify API getting a list of songs based off a search and using the spotify player (requires changing the API token inside the play.html file).
+After cloning the repo, in the project root, run `npm install`. This will call `npm install` inside the frontend/ and backend/ folders, installing all of the packages needed.
+
+Go into the backend/ folder and run `docker-compose up -d` to start the database. Later you will run `docker-compose down` to stop running the database.
+
+Before you run the program, make sure the database is running. Then, run `npm start` in the project root. This will call npm start inside the frontend/ and backend/ folders, starting the frontend and backend.
+
+Go to `localhost:3000` in a browser to begin using.
+
+Quick Start Guide
+-----------------
